things made better

--- a/about.html
+++ b/about.html
@@ -51,14 +51,16 @@
             <div class="row">
               <div class="col-xs-6">
                 <div class="logo">
-                  <a href="index.html"
-                    ><span class="ubutia-icon">
-                      <img
-                        src="/ubutia-gh-pages/assets/images/lllogo.png"
-                        alt="site-logo"
-                        width="100px"
-                      /> </span
-                  ></a>
+                <a href="index.html">
+                      <span class="ubutia-icon">
+                        <img
+                          src="\ubutia-gh-pages\assets\images\lllogo.png"
+                          alt="site-logo"
+                          width="100px"
+                          style="margin-top: -10px"
+                        />
+                      </span>
+                    </a>
                 </div>
               </div>
               <div class="col-xs-6 text-right">
@@ -83,19 +85,14 @@
             <div class="about-content">
               <!-- <h1 style="text-align: center">Heading 1 with paragraph</h1> -->
               <p>
-                In a world driven by technology, we stand at the forefront of
-                innovation and expertise. Founded in the late 2000s by
-                passionate engineers, our journey began with a clear mission: to
-                build impactful software that drives real-world results. What
-                started as a small team has grown into a global partner for
-                businesses, delivering solutions across web, mobile, AI, cloud,
-                and enterprise systems. We empower organizations with
-                future-ready technology—designed to scale, adapt, and lead in a
-                rapidly evolving digital landscape.
+        In a world shaped by technology, we lead as innovators and experts in transformative software development. Founded by a team of passionate engineers, our mission is to craft solutions that drive meaningful, real-world impact. From our origins as a dedicated group, we have grown into a global partner for businesses, delivering cutting-edge solutions across web, mobile, AI, cloud, and enterprise systems. We empower organizations with scalable, future-ready technology designed to adapt and excel in the dynamic digital landscape. <br>
+
+Our growth is fueled by a commitment to excellence and collaboration. We don’t just create software—we build ecosystems that enable businesses to thrive, turning bold visions into measurable success. By combining deep technical expertise with innovative problem-solving, we tailor solutions to address unique challenges, ensuring they are robust, intuitive, and sustainable. Serving clients from startups to global enterprises, we are dedicated to pushing boundaries and delivering technology that drives progress and positions our partners as leaders in an ever-evolving digital world.
               </p>
               <img
-                src="/assets/images/about-flex.png"
+                src="https://img.freepik.com/premium-photo/business-concept_173387-5906.jpg?ga=GA1.1.860952126.1749829977&semt=ais_hybrid&w=740"
                 alt="about-content-image"
+                width="50%"
               />
 
               <!-- <img src="/assets/images/about-flex-image.jpg" alt="about-flex-image"> -->
@@ -107,7 +104,7 @@
                 <div class="col-sm-3">
                   <div class="ubutia-card">
                     <div class="ubutia-card-header">
-                      <img class="img-responsive" src="ubutia-gh-pages/assets/images/innovation.png" alt="Value 1" />
+                      <img class="img-responsive" src="https://img.freepik.com/premium-photo/innovation-technology-business-finance-background_31965-2378.jpg?ga=GA1.1.860952126.1749829977&semt=ais_hybrid&w=740" alt="Value 1" />
                     </div>
                     <div class="ubutia-card-content">
                       <h3 style="color: black;">Innovation</h3>
@@ -118,7 +115,7 @@
                 <div class="col-sm-3">
                   <div class="ubutia-card">
                     <div class="ubutia-card-header">
-                      <img class="img-responsive" src="ubutia-gh-pages/assets/images/integrity.png" alt="Value 2" />
+                      <img class="img-responsive" src="https://img.freepik.com/premium-photo/businessman-holding-certification-badge-quality-assurance-trust-guarantee-excellence-concept_1197250-8233.jpg?ga=GA1.1.860952126.1749829977&semt=ais_hybrid&w=740" alt="Value 2" />
                     </div>
                     <div class="ubutia-card-content">
                       <h3 style="color: black;">Integrity</h3>
@@ -129,7 +126,7 @@
                 <div class="col-sm-3">
                   <div class="ubutia-card">
                     <div class="ubutia-card-header">
-                      <img class="img-responsive" src="ubutia-gh-pages/assets/images/collaboration.png" alt="Value 3" />
+                      <img class="img-responsive" src="https://img.freepik.com/premium-photo/business-teamwork-meeting-success-achievement-goal_42957-2564.jpg?ga=GA1.1.860952126.1749829977&semt=ais_hybrid&w=740" alt="Value 3" />
                     </div>
                     <div class="ubutia-card-content">
                       <h3 style="color: black;">Collaboration</h3>
@@ -140,7 +137,7 @@
                 <div class="col-sm-3">
                   <div class="ubutia-card">
                     <div class="ubutia-card-header">
-                      <img class="img-responsive" src="ubutia-gh-pages/assets/images/excellence.png" alt="Value 4" />
+                      <img class="img-responsive" src="https://img.freepik.com/premium-photo/businessman-holding-showing-best-quality-assurance-with-golden-five-stars-guarantee-product-iso-service-concept_186616-1380.jpg?ga=GA1.1.860952126.1749829977&semt=ais_hybrid&w=740" alt="Value 4" />
                     </div>
                     <div class="ubutia-card-content">
                       <h3 style="color: black;">Excellence</h3>
@@ -156,7 +153,7 @@
                 <div class="col-sm-4">
                   <div class="ubutia-card">
                     <div class="ubutia-card-header">
-                      <img class="img-responsive" src="ubutia-gh-pages/assets/images/web-work.png" />
+                      <img class="img-responsive" src="https://img.freepik.com/free-vector/web-development-composition_1284-4532.jpg?ga=GA1.1.860952126.1749829977&semt=ais_hybrid&w=740" />
                     </div>
                     <div class="ubutia-card-content">
                       <h3 style="color: black;">Web Design & Development</h3>
@@ -169,7 +166,7 @@
                 <div class="col-sm-4">
                   <div class="ubutia-card">
                     <div class="ubutia-card-header">
-                      <img class="img-responsive" src="ubutia-gh-pages/assets/images/graphic-work.png" />
+                      <img class="img-responsive" src="https://img.freepik.com/premium-vector/flat-isometric-illustration-graphic-designer-workspace_1058698-1428.jpg?ga=GA1.1.860952126.1749829977&semt=ais_hybrid&w=740" />
                     </div>
                     <div class="ubutia-card-content">
                         <h3 style="color: black;">Graphic Design</h3>
@@ -182,7 +179,7 @@
                 <div class="col-sm-4">
                   <div class="ubutia-card">
                     <div class="ubutia-card-header">
-                      <img class="img-responsive" src="ubutia-gh-pages/assets/images/dm-work.jpg" />
+                      <img class="img-responsive" src="https://img.freepik.com/premium-photo/hands-holding-smartphone-social-media-concept_23-2150208263.jpg?ga=GA1.1.860952126.1749829977&semt=ais_hybrid&w=740" />
                     </div>
                     <div class="ubutia-card-content">
                         <h3 style="color: black;">Digital Marketing</h3>
@@ -193,7 +190,7 @@
                   </div>
                 </div>
               </div>
-              <h2 class="mt80">Team members</h2>
+              <!-- <h2 class="mt80">Team members</h2>
               <div class="row">
                 <div class="col-sm-4">
                   <div class="ubutia-card">
@@ -269,7 +266,7 @@
                       </div>
                     </div>
                   </div>
-                </div>
+                </div> -->
               </div>
             </div>
           </div>
@@ -333,7 +330,7 @@
       </div>
       
 
-      <footer class="footer">
+           <footer class="footer">
         <div class="container">
           <div class="row">
             <div class="col-sm-4">
@@ -346,28 +343,47 @@
               </ul>
             </div>
             <div class="col-sm-4">
-              <h4>Contact Info</h4>
-              <p>Office No.50A, 5 The Shires Old Bedford Road Luton,England LU27QA</p>
+              <h4>UK</h4>
+              <p>
+                Office No.50A, 5 The Shires Old Bedford Road Luton, England
+                LU27QA
+              </p>
               <p>Phone: +447716487602</p>
-              <p>Email: support@streamartisian.com</p>
+              <p>Email: services@streamartisan.com</p>
             </div>
             <div class="col-sm-4">
+              <h4>USA</h4>
+              <p>
+                Stream Artisan Corporation 418 Broadway #5981 Albany, NY, 12207
+              </p>
+              <p>Phone: +13323731192</p>
+              <p>Email: services@streamartisan.com</p>
+            </div>
+            <!-- <div class="col-sm-4">
               <h4>Follow Us</h4>
               <div class="social-icons">
                 <ul>
-                  <a href="#"><li><span class="ion-social-facebook"></span></li></a>
-                  <a href="#"><li><span class="ion-social-twitter"></span></li></a>
-                  <a href="#"><li><span class="ion-social-pinterest"></span></li></a>
-                  <a href="#"><li><span class="ion-social-instagram"></span></li></a>
+                  <a href="#"
+                    ><li><span class="ion-social-facebook"></span></li
+                  ></a>
+                  <a href="#"
+                    ><li><span class="ion-social-twitter"></span></li
+                  ></a>
+                  <a href="#"
+                    ><li><span class="ion-social-pinterest"></span></li
+                  ></a>
+                  <a href="#"
+                    ><li><span class="ion-social-instagram"></span></li
+                  ></a>
                 </ul>
               </div>
-            </div>
+            </div> -->
           </div>
           <div class="row">
             <div class="col-sm-12 text-center">
               <p>
                 &copy; 2025. All rights reserved. Design by
-                <a href="https://streamartisian.com/">streamartisian</a>.
+                <a href="https://streamartisan.com/">streamartisan</a>.
               </p>
             </div>
           </div>
