--- a/contact.html
+++ b/contact.html
@@ -49,14 +49,16 @@
             <div class="row">
               <div class="col-xs-6">
                 <div class="logo">
-                  <a href="index.html"
-                    ><span class="ubutia-icon">
+                  <a href="index.html">
+                    <span class="ubutia-icon">
                       <img
-                        src="ubutia-gh-pages/assets/images/lllogo.png"
+                        src="\ubutia-gh-pages\assets\images\lllogo.png"
                         alt="site-logo"
                         width="100px"
-                      /> </span
-                  ></a>
+                        style="margin-top: -10px"
+                      />
+                    </span>
+                  </a>
                 </div>
               </div>
               <div class="col-xs-6 text-right">
@@ -89,7 +91,7 @@
                       aria-expanded="true"
                       aria-controls="faqCollapse1"
                     >
-                      What is ubutia?
+                      1. What services does StreamArtisan offer?
                     </button>
                   </h5>
                 </div>
@@ -100,8 +102,12 @@
                   data-parent="#faqAccordion"
                 >
                   <div class="card-body">
-                    Ubutia is a platform that provides exceptional services to
-                    its users.
+                    StreamArtisan provides comprehensive solutions in web
+                    development, digital marketing, graphic designing, and
+                    e-book writing. We create scalable websites, data-driven
+                    marketing campaigns, visually compelling designs, and
+                    professionally crafted e-books tailored to your business
+                    needs.
                   </div>
                 </div>
               </div>
@@ -116,7 +122,8 @@
                       aria-expanded="false"
                       aria-controls="faqCollapse2"
                     >
-                      How can I contact support?
+                      2. How does StreamArtisan ensure the quality of its web
+                      development projects?
                     </button>
                   </h5>
                 </div>
@@ -127,8 +134,11 @@
                   data-parent="#faqAccordion"
                 >
                   <div class="card-body">
-                    You can contact support via email at
-                    support@streamartisian.com or call us at +447716487602.
+                    Our team of skilled engineers follows a rigorous development
+                    process, combining industry best practices with innovative
+                    technologies. We prioritize user-centric design,
+                    scalability, and performance, delivering websites that are
+                    both functional and future-ready.
                   </div>
                 </div>
               </div>
@@ -143,7 +153,8 @@
                       aria-expanded="false"
                       aria-controls="faqCollapse3"
                     >
-                      Where are you located?
+                      3. Can StreamArtisan help improve my brand’s online
+                      presence?
                     </button>
                   </h5>
                 </div>
@@ -154,11 +165,16 @@
                   data-parent="#faqAccordion"
                 >
                   <div class="card-body">
-                    Our office is located at Office No.50A, 5 The Shires Old
-                    Bedford Road Luton, England LU27QA.
+                    Yes, StreamArtisan specializes in enhancing online
+                    visibility through tailored digital marketing strategies,
+                    SEO optimization, and engaging content creation. We work
+                    closely with clients to understand their brand and target
+                    audience, ensuring a strong online presence that drives
+                    results.
                   </div>
                 </div>
               </div>
+
               <div class="card">
                 <div class="card-header" id="faqHeading4">
                   <h5 class="mb-0">
@@ -170,7 +186,8 @@
                       aria-expanded="false"
                       aria-controls="faqCollapse4"
                     >
-                      What services do you offer?
+                      4. What is the process for creating e-books with
+                      StreamArtisan?
                     </button>
                   </h5>
                 </div>
@@ -181,8 +198,11 @@
                   data-parent="#faqAccordion"
                 >
                   <div class="card-body">
-                    We offer a variety of services including web development,
-                    design, and consulting.
+                    We collaborate closely with clients to understand their
+                    vision and goals. Our e-book writing process involves
+                    research, professional writing, editing, and formatting,
+                    paired with custom graphic design to create engaging,
+                    high-quality e-books that resonate with your audience.
                   </div>
                 </div>
               </div>
@@ -197,7 +217,8 @@
                       aria-expanded="false"
                       aria-controls="faqCollapse5"
                     >
-                      How can I get a quote?
+                      5. How does StreamArtisan approach graphic design
+                      projects?
                     </button>
                   </h5>
                 </div>
@@ -208,8 +229,11 @@
                   data-parent="#faqAccordion"
                 >
                   <div class="card-body">
-                    You can request a quote by filling out the contact form or
-                    emailing us directly.
+                    Our graphic design team blends creativity with strategy to
+                    produce visually stunning designs that align with your brand
+                    identity. From logos to marketing materials, we ensure every
+                    project is unique, impactful, and tailored to your business
+                    objectives.
                   </div>
                 </div>
               </div>
@@ -310,15 +334,23 @@
               </ul>
             </div>
             <div class="col-sm-4">
-              <h4>Contact Info</h4>
+              <h4>UK</h4>
               <p>
-                Office No.50A, 5 The Shires Old Bedford Road Luton,England
+                Office No.50A, 5 The Shires Old Bedford Road Luton, England
                 LU27QA
               </p>
               <p>Phone: +447716487602</p>
-              <p>Email: support@streamartisian.com</p>
+              <p>Email: services@streamartisan.com</p>
             </div>
             <div class="col-sm-4">
+              <h4>USA</h4>
+              <p>
+                Stream Artisan Corporation 418 Broadway #5981 Albany, NY, 12207
+              </p>
+              <p>Phone: +13323731192</p>
+              <p>Email: services@streamartisan.com</p>
+            </div>
+            <!-- <div class="col-sm-4">
               <h4>Follow Us</h4>
               <div class="social-icons">
                 <ul>
@@ -336,13 +368,13 @@
                   ></a>
                 </ul>
               </div>
-            </div>
+            </div> -->
           </div>
           <div class="row">
             <div class="col-sm-12 text-center">
               <p>
                 &copy; 2025. All rights reserved. Design by
-                <a href="https://streamartisian.com/">streamartisian</a>.
+                <a href="https://streamartisan.com/">streamartisan</a>.
               </p>
             </div>
           </div>
