--- a/web-development.html
+++ b/web-development.html
@@ -16,7 +16,7 @@
     <link href="assets/css/owl.theme.default.min.css" rel="stylesheet" />
     <link href="assets/css/magnific-popup.css" rel="stylesheet" />
     <link href="assets/css/style.css" rel="stylesheet" />
-    <link rel="stylesheet" href="assets/css/web.css" />
+    <link rel="stylesheet" href="assets/css/web.css">
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -44,14 +44,15 @@
               <div class="col-xs-6">
                 <div class="logo">
                   <a href="index.html">
-                    <span class="ubutia-icon">
-                      <img
-                        src="/assets/images/lllogo.png"
-                        alt="site-logo"
-                        width="100px"
-                      />
-                    </span>
-                  </a>
+                      <span class="ubutia-icon">
+                        <img
+                          src="\ubutia-gh-pages\assets\images\lllogo.png"
+                          alt="site-logo"
+                          width="100px"
+                          style="margin-top: -10px"
+                        />
+                      </span>
+                    </a>
                 </div>
               </div>
               <div class="col-xs-6 text-right">
@@ -71,7 +72,7 @@
           <p class="hero-description">
             Custom web solutions tailored for your business goals.
           </p>
-          <button class="cta" aria-label="Schedule a Free Consultation">
+          <button onclick="location.href='contact.html'" class="cta" aria-label="Schedule a Free Consultation">
             Schedule a Free Consultation
           </button>
         </div>
@@ -81,26 +82,26 @@
         <h2 style="margin-top: 20px">Why Choose Us</h2>
         <div class="cards">
           <div class="card">
-            <img src="ubutia-gh-pages/assets/images/web-design.png" alt="Custom Web Design" />
+            <img src="assets/images/web-design.png" alt="Custom Web Design" />
             <p style="font-size: 20px">Custom Design</p>
           </div>
           <div class="card">
             <img
-              src="ubutia-gh-pages/assets/images/optimization.png"
+              src="assets/images/optimization.png"
               alt="Website Optimization"
             />
             <p style="font-size: 20px">Fast & Optimized</p>
           </div>
           <div class="card">
             <img
-              src="ubutia-gh-pages/assets/images/responsive-design.png"
+              src="assets/images/responsive-design.png"
               alt="Responsive Web Design"
             />
             <p style="font-size: 20px">Responsive Design</p>
           </div>
           <div class="card">
             <img
-              src="ubutia-gh-pages/assets/images/maintenance.png"
+              src="assets/images/maintenance.png"
               alt="Maintenance and Support"
             />
             <p style="font-size: 20px">Maintenance & Support</p>
@@ -208,7 +209,7 @@
         <div class="package-cards">
           <div class="package-card">
             <h3>Basic</h3>
-            <p>PKR 49k *</p>
+            <!-- <p>PKR 49k *</p> -->
             <ul>
               <li><span class="icon-tick">✔</span> 1-3 Web Pages</li>
               <li><span class="icon-tick">✔</span> Custom Designed Website</li>
@@ -231,12 +232,12 @@
               <li><span class="icon-cross">✖</span> Web Store</li>
               <li><span class="icon-tick">✔</span> 100% Advance / Down Payment</li>
             </ul>
-            <button class="cta" aria-label="Choose Basic Package">BUY</button>
+            <!-- <button class="cta" aria-label="Choose Basic Package">BUY</button> -->
           </div>
           <div class="package-card">
             <h3>Standard</h3>
             <p>Most Popular</p>
-            <p>PKR 110k *</p>
+            <!-- <p>PKR 110k *</p> -->
             <ul>
               <li><span class="icon-tick">✔</span> 1-5 Web Pages</li>
               <li><span class="icon-tick">✔</span> Custom Designed Website</li>
@@ -259,11 +260,11 @@
               <li><span class="icon-cross">✖</span> Web Store</li>
               <li><span class="icon-tick">✔</span> 50% Advance / Down Payment</li>
             </ul>
-            <button class="cta" aria-label="Choose Standard Package">BUY</button>
+            <!-- <button class="cta" aria-label="Choose Standard Package">BUY</button> -->
           </div>
           <div class="package-card">
             <h3>Premium</h3>
-            <p>PKR 149k *</p>
+            <!-- <p>PKR 149k *</p> -->
             <ul>
               <li><span class="icon-tick">✔</span> 1-20 Web Pages</li>
               <li><span class="icon-tick">✔</span> Custom Designed Website</li>
@@ -286,7 +287,7 @@
               <li><span class="icon-tick">✔</span> Web Store</li>
               <li><span class="icon-tick">✔</span> 50% Advance / Down Payment</li>
             </ul>
-            <button class="cta" aria-label="Choose Premium Package">BUY</button>
+            <!-- <button class="cta" aria-label="Choose Premium Package">BUY</button> -->
           </div>
         </div>
       </div>
