--- a/about.html
+++ b/about.html
@@ -32,14 +32,14 @@
   <body>
     <div id="menu-item" class="menu-item hide-menu">
       <div class="container">
-        <ul>
-          <a href="index.html"><li>home</li></a>
-          <a href="about.html"><li>about</li></a>
-          <a href="services.html"><li>services</li></a>
-          <a href="contact.html"><li>contact</li></a>
+      <ul>
+          <a href="index.html"><li>Home</li></a>
+          <a href="about.html"><li>About</li></a>
+          <a href="services.html"><li>Services</li></a>
+          <a href="contact.html"><li>Contact</li></a>
           <a href="#workstation"><li>portfolio</li></a>
           <a href="#team"><li>team</li></a>
-          <a href="elements.html"><li>Elements</li></a>
+          <a href="blog.html"><li>Blog</li></a>
         </ul>
       </div>
     </div>
@@ -381,6 +381,8 @@ Our growth is fueled by a commitment to excellence and collaboration. We don’t
           </div>
           <div class="row">
             <div class="col-sm-12 text-center">
+                  <p><a href="terms.html">Terms and Conditions</a></p>
+              <p><a href="privacy.html">Privacy Policy</a></p>
               <p>
                 &copy; 2025. All rights reserved. Design by
                 <a href="https://streamartisan.com/">streamartisan</a>.
