--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
     <div id="menu-item" class="menu-item hide-menu">
       <div class="container">
         <ul>
-          <a href="index.html"><li>home</li></a>
-          <a href="about.html"><li>about</li></a>
-          <a href="services.html"><li>services</li></a>
-          <a href="contact.html"><li>contact</li></a>
+          <a href="index.html"><li>Home</li></a>
+          <a href="about.html"><li>About</li></a>
+          <a href="services.html"><li>Services</li></a>
+          <a href="contact.html"><li>Contact</li></a>
           <a href="#workstation"><li>portfolio</li></a>
           <a href="#team"><li>team</li></a>
-          <a href="elements.html"><li>Elements</li></a>
+          <a href="blog.html"><li>Blog</li></a>
         </ul>
       </div>
     </div>
@@ -49,23 +49,21 @@
               <div class="row">
                 <div class="col-xs-6">
                   <div class="logo">
-                    <a href="index.html">
-                      <span class="ubutia-icon">
+                    <a href="index.html"
+                      ><span class="ubutia-icon">
                         <img
-                          src="\ubutia-gh-pages\assets\images\lllogo.png"
+                          src="assets/images/lllogo.png"
                           alt="site-logo"
                           width="100px"
-                          style="margin-top: -10px"
-                        />
-                      </span>
-                    </a>
+                        /> </span
+                    ></a>
                   </div>
                 </div>
                 <div class="col-xs-6 text-right">
                   <div class="menu m">
-                    <a href="#">
-                      <span class="ion-navicon _ion-android-menu"></span>
-                    </a>
+                    <a href="#"
+                      ><span class="ion-navicon _ion-android-menu"></span
+                    ></a>
                   </div>
                 </div>
               </div>
@@ -76,39 +74,27 @@
           <div class="row">
             <div class="intro-box">
               <div class="intro">
-                <h1>Transforming Visions into Reality</h1>
-                <p>Innovative Digital Agency with a Global Reach</p>
-                <a class="btn ubutia-btn" href="about.html">Explore us</a>
+                <h1>We make ideas become a reality</h1>
+                <p>Creative digital agency based Internationally</p>
+                <a class="btn ubutia-btn" href="contact.html">Explore us</a>
               </div>
             </div>
           </div>
         </div>
       </header>
       <section id="about" class="about section">
-        <div class="container about-flex">
-          <img
-            src="https://img.freepik.com/premium-photo/business-concept_173387-5906.jpg?ga=GA1.1.860952126.1749829977&semt=ais_hybrid&w=740"
-            alt="Business concept image"
-            class="about-img"
-          />
-          <div class="about-content">
-            <h2 class="title" >About Us</h2>
-            <p>
-              We are a dynamic team of innovative engineers and creative
-              problem-solvers committed to crafting intelligent, scalable
-              software solutions. Specializing in web and mobile applications,
-              AI-powered systems, and robust enterprise platforms, we empower
-              businesses to leverage cutting-edge technology for innovation,
-              growth, and success in the digital era. Our passion for excellence
-              drives us to deliver tailored solutions that transform ideas into
-              reality. <br />
-              With a client-centric approach, we collaborate closely with
-              businesses to understand their unique challenges and goals. By
-              combining technical expertise with creative vision, we build
-              solutions that are not only functional but also intuitive and
-              future-proof, ensuring our partners stay ahead in a rapidly
-              evolving digital landscape.
-            </p>
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-8 col-sm-offset-2">
+              <h2 class="title">About agency</h2>
+              <p>
+                We are a team of passionate engineers and creative
+                problem-solvers dedicated to building smart, scalable software
+                solutions. From web and mobile applications to AI-driven systems
+                and enterprise platforms, we help businesses harness technology
+                to innovate, grow, and thrive in a digital world.
+              </p>
+            </div>
           </div>
         </div>
       </section>
@@ -156,7 +142,7 @@
                 <div class="ubutia-card-header">
                   <div class="card-icon">
                     <img
-                      src="\ubutia-gh-pages\assets\images\dm-service.png"
+                      src="assets/images/dm-service.png"
                       alt="digital-marketing"
                       width="130px"
                       style="border-radius: 50%"
@@ -178,9 +164,9 @@
                 <div class="ubutia-card-header">
                   <div class="card-icon">
                     <img
-                      src="\ubutia-gh-pages\assets\images\ebook.jpg"
+                      src="assets/images/ebook1.jpg"
                       alt="digital-marketing"
-                      width="100px"
+                      width="130px"
                       style="border-radius: 50%"
                     />
                   </div>
@@ -580,30 +566,13 @@
               <p>Phone: +13323731192</p>
               <p>Email: services@streamartisan.com</p>
             </div>
-            <!-- <div class="col-sm-4">
-              <h4>Follow Us</h4>
-              <div class="social-icons">
-                <ul>
-                  <a href="#"
-                    ><li><span class="ion-social-facebook"></span></li
-                  ></a>
-                  <a href="#"
-                    ><li><span class="ion-social-twitter"></span></li
-                  ></a>
-                  <a href="#"
-                    ><li><span class="ion-social-pinterest"></span></li
-                  ></a>
-                  <a href="#"
-                    ><li><span class="ion-social-instagram"></span></li
-                  ></a>
-                </ul>
-              </div>
-            </div> -->
           </div>
           <div class="row">
             <div class="col-sm-12 text-center">
+              <p><a href="terms.html">Terms and Conditions</a></p>
+              <p><a href="privacy.html">Privacy Policy</a></p>
               <p>
-                &copy; 2025. All rights reserved. Design by
+                © 2025. All rights reserved. Design by
                 <a href="https://streamartisan.com/">streamartisan</a>.
               </p>
             </div>
@@ -617,47 +586,5 @@
     <script src="assets/js/owl.carousel.min.js"></script>
     <script src="assets/js/jquery.magnific-popup.js"></script>
     <script src="assets/js/script.js"></script>
-    <style>
-      /* About section layout */
-      .about-flex {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        align-items: center;
-        gap: 20px;
-        padding: 20px;
-        flex-direction: row;
-      }
-      .about-img {
-        flex: 1;
-        min-width: 300px;
-        max-width: 500px;
-        width: 60%;
-        height: auto;
-        order: 1;
-      }
-      .about-content {
-        flex: 1;
-        min-width: 300px;
-        max-width: 740px;
-        order: 2;
-      }
-      @media (max-width: 991px) {
-        .about-flex {
-          flex-direction: column;
-          text-align: center;
-        }
-        .about-img {
-          order: 1;
-          margin-bottom: 20px;
-          width: 100%;
-          max-width: 100%;
-        }
-        .about-content {
-          order: 2;
-          max-width: 100%;
-        }
-      }
-    </style>
   </body>
 </html>
