--- a/contact.html
+++ b/contact.html
@@ -31,14 +31,14 @@
   <body>
     <div id="menu-item" class="menu-item hide-menu">
       <div class="container">
-        <ul>
-          <a href="index.html"><li>home</li></a>
-          <a href="about.html"><li>about</li></a>
-          <a href="services.html"><li>services</li></a>
-          <a href="contact.html"><li>contact</li></a>
-          <a href="index.html#workstation"><li>portfolio</li></a>
-          <a href="index.html#team"><li>team</li></a>
-          <a href="elements.html"><li>Elements</li></a>
+          <ul>
+          <a href="index.html"><li>Home</li></a>
+          <a href="about.html"><li>About</li></a>
+          <a href="services.html"><li>Services</li></a>
+          <a href="contact.html"><li>Contact</li></a>
+          <a href="#workstation"><li>portfolio</li></a>
+          <a href="#team"><li>team</li></a>
+          <a href="blog.html"><li>Blog</li></a>
         </ul>
       </div>
     </div>
@@ -372,6 +372,8 @@
           </div>
           <div class="row">
             <div class="col-sm-12 text-center">
+              <p><a href="terms.html">Terms and Conditions</a></p>
+              <p><a href="privacy.html">Privacy Policy</a></p>
               <p>
                 &copy; 2025. All rights reserved. Design by
                 <a href="https://streamartisan.com/">streamartisan</a>.
