--- a/web-development.html
+++ b/web-development.html
@@ -16,7 +16,7 @@
     <link href="assets/css/owl.theme.default.min.css" rel="stylesheet" />
     <link href="assets/css/magnific-popup.css" rel="stylesheet" />
     <link href="assets/css/style.css" rel="stylesheet" />
-    <link rel="stylesheet" href="assets/css/web.css">
+    <link href="assets/css/web.css" rel="stylesheet" />
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -25,14 +25,14 @@
   <body>
     <div id="menu-item" class="menu-item hide-menu">
       <div class="container">
-        <ul>
-          <a href="index.html"><li>home</li></a>
-          <a href="about.html"><li>about</li></a>
-          <a href="services.html"><li>services</li></a>
-          <a href="index.html#workstation"><li>portfolio</li></a>
-          <a href="index.html#team"><li>team</li></a>
-          <a href="index.html#contact"><li>contact</li></a>
-          <a href="elements.html"><li>Elements</li></a>
+       <ul>
+          <a href="index.html"><li>Home</li></a>
+          <a href="about.html"><li>About</li></a>
+          <a href="services.html"><li>Services</li></a>
+          <a href="contact.html"><li>Contact</li></a>
+          <a href="#workstation"><li>portfolio</li></a>
+          <a href="#team"><li>team</li></a>
+          <a href="blog.html"><li>Blog</li></a>
         </ul>
       </div>
     </div>
@@ -44,15 +44,15 @@
               <div class="col-xs-6">
                 <div class="logo">
                   <a href="index.html">
-                      <span class="ubutia-icon">
-                        <img
-                          src="\ubutia-gh-pages\assets\images\lllogo.png"
-                          alt="site-logo"
-                          width="100px"
-                          style="margin-top: -10px"
-                        />
-                      </span>
-                    </a>
+                    <span class="ubutia-icon">
+                      <img
+                        src="\ubutia-gh-pages\assets\images\lllogo.png"
+                        alt="site-logo"
+                        width="100px"
+                        style="margin-top: -10px"
+                      />
+                    </span>
+                  </a>
                 </div>
               </div>
               <div class="col-xs-6 text-right">
@@ -68,11 +68,15 @@
       </nav>
       <div class="hero">
         <div class="hero-text">
-          <h1>Build Modern, Responsive Websites </h1>
+          <h1>Build Modern, Responsive Websites</h1>
           <p class="hero-description">
             Custom web solutions tailored for your business goals.
           </p>
-          <button onclick="location.href='contact.html'" class="cta" aria-label="Schedule a Free Consultation">
+          <button
+            onclick="location.href='contact.html'"
+            class="cta"
+            aria-label="Schedule a Free Consultation"
+          >
             Schedule a Free Consultation
           </button>
         </div>
@@ -113,7 +117,10 @@
         <h2 class="section-title text-center">Our Web Development Services</h2>
         <div class="services">
           <div class="carrd">
-            <img src="https://img.freepik.com/free-photo/web-design-concepts-with-blurred-background_1134-82.jpg?ga=GA1.1.860952126.1749829977&semt=ais_hybrid&w=740" alt="Custom Web Design" />
+            <img
+              src="https://img.freepik.com/free-photo/web-design-concepts-with-blurred-background_1134-82.jpg?ga=GA1.1.860952126.1749829977&semt=ais_hybrid&w=740"
+              alt="Custom Web Design"
+            />
             <p style="font-size: 20px">Custom Website Development</p>
           </div>
           <div class="carrd">
@@ -124,7 +131,10 @@
             <p style="font-size: 20px">Ecommerce Development</p>
           </div>
           <div class="carrd">
-            <img src="https://img.freepik.com/free-vector/flat-content-management-system-illustrated_23-2148810388.jpg?ga=GA1.1.860952126.1749829977&semt=ais_hybrid&w=740" alt="cms" />
+            <img
+              src="https://img.freepik.com/free-vector/flat-content-management-system-illustrated_23-2148810388.jpg?ga=GA1.1.860952126.1749829977&semt=ais_hybrid&w=740"
+              alt="cms"
+            />
             <p style="font-size: 20px">
               CMS <br />
               Integration
@@ -170,35 +180,59 @@
         <h2 class="section-title text-center">Projects We Have Done</h2>
         <div class="project-gallery">
           <div class="project-card">
-            <img src="https://img.freepik.com/free-psd/gradient-e-commerce-landing-page_23-2149981362.jpg?ga=GA1.1.860952126.1749829977&semt=ais_hybrid&w=740" alt="Project 1" />
+            <img
+              src="https://img.freepik.com/free-psd/gradient-e-commerce-landing-page_23-2149981362.jpg?ga=GA1.1.860952126.1749829977&semt=ais_hybrid&w=740"
+              alt="Project 1"
+            />
             <p>E-commerce Website</p>
           </div>
           <div class="project-card">
-            <img src="https://img.freepik.com/premium-vector/black-elegant-website-design-template-business-development_136420-21.jpg?ga=GA1.1.860952126.1749829977&semt=ais_hybrid&w=740" alt="Project 2" />
+            <img
+              src="https://img.freepik.com/premium-vector/black-elegant-website-design-template-business-development_136420-21.jpg?ga=GA1.1.860952126.1749829977&semt=ais_hybrid&w=740"
+              alt="Project 2"
+            />
             <p>Portfolio Website</p>
           </div>
           <div class="project-card">
-            <img src="https://img.freepik.com/premium-photo/website-design-website-called-ux-ui_659722-11301.jpg?ga=GA1.1.860952126.1749829977&semt=ais_hybrid&w=740" alt="Project 3" />
+            <img
+              src="https://img.freepik.com/premium-photo/website-design-website-called-ux-ui_659722-11301.jpg?ga=GA1.1.860952126.1749829977&semt=ais_hybrid&w=740"
+              alt="Project 3"
+            />
             <p>Corporate Website</p>
           </div>
           <div class="project-card">
-            <img src="https://img.freepik.com/premium-photo/blogging-concept-web-blog-social-media-information-network-snugly_31965-691178.jpg?ga=GA1.1.860952126.1749829977&semt=ais_hybrid&w=740" alt="Project 4" />
+            <img
+              src="https://img.freepik.com/premium-photo/blogging-concept-web-blog-social-media-information-network-snugly_31965-691178.jpg?ga=GA1.1.860952126.1749829977&semt=ais_hybrid&w=740"
+              alt="Project 4"
+            />
             <p>Blog Platform</p>
           </div>
           <div class="project-card">
-            <img src="https://img.freepik.com/premium-vector/digital-library-online-education-internet-blank-space-phone_255625-159.jpg?ga=GA1.1.860952126.1749829977&semt=ais_hybrid&w=740" alt="Project 5" />
+            <img
+              src="https://img.freepik.com/premium-vector/digital-library-online-education-internet-blank-space-phone_255625-159.jpg?ga=GA1.1.860952126.1749829977&semt=ais_hybrid&w=740"
+              alt="Project 5"
+            />
             <p>Educational Platform</p>
           </div>
           <div class="project-card">
-            <img src="https://img.freepik.com/premium-photo/website-design-website-called-ux-ui_659722-11301.jpg?ga=GA1.1.860952126.1749829977&semt=ais_hybrid&w=740" alt="Project 6" />
+            <img
+              src="https://img.freepik.com/premium-photo/website-design-website-called-ux-ui_659722-11301.jpg?ga=GA1.1.860952126.1749829977&semt=ais_hybrid&w=740"
+              alt="Project 6"
+            />
             <p>Real Estate Website</p>
           </div>
           <div class="project-card">
-            <img src="https://img.freepik.com/free-vector/gift-shopping-checklist-girl-cartoon-character-buying-presents-online-e-commerce-gift-card-promotion-birthday-anniversary-bonus-vector-isolated-concept-metaphor-illustration_335657-1282.jpg?ga=GA1.1.860952126.1749829977&semt=ais_hybrid&w=740" alt="Project 7" />
+            <img
+              src="https://img.freepik.com/free-vector/gift-shopping-checklist-girl-cartoon-character-buying-presents-online-e-commerce-gift-card-promotion-birthday-anniversary-bonus-vector-isolated-concept-metaphor-illustration_335657-1282.jpg?ga=GA1.1.860952126.1749829977&semt=ais_hybrid&w=740"
+              alt="Project 7"
+            />
             <p>Event Management Website</p>
           </div>
           <div class="project-card">
-            <img src="https://img.freepik.com/premium-photo/online-fashion-shopping-with-laptop_23-2150400630.jpg?ga=GA1.1.860952126.1749829977&semt=ais_hybrid&w=740" alt="Project 8" />
+            <img
+              src="https://img.freepik.com/premium-photo/online-fashion-shopping-with-laptop_23-2150400630.jpg?ga=GA1.1.860952126.1749829977&semt=ais_hybrid&w=740"
+              alt="Project 8"
+            />
             <p>Online Marketplace</p>
           </div>
         </div>
@@ -214,23 +248,33 @@
               <li><span class="icon-tick">✔</span> 1-3 Web Pages</li>
               <li><span class="icon-tick">✔</span> Custom Designed Website</li>
               <li><span class="icon-tick">✔</span> Mobile-Friendly Design</li>
-              <li><span class="icon-tick">✔</span> 3-5 Days to Complete a Page</li>
+              <li>
+                <span class="icon-tick">✔</span> 3-5 Days to Complete a Page
+              </li>
               <li><span class="icon-tick">✔</span> 1 Creative Concept</li>
               <li><span class="icon-tick">✔</span> 1 Revision - up to</li>
-              <li><span class="icon-tick">✔</span> 2-5 Initial Design - in x Days</li>
+              <li>
+                <span class="icon-tick">✔</span> 2-5 Initial Design - in x Days
+              </li>
               <li><span class="icon-tick">✔</span> Multimedia Support</li>
               <li><span class="icon-tick">✔</span> Custom Graphics</li>
               <li><span class="icon-tick">✔</span> Query / Feedback Form</li>
               <li><span class="icon-tick">✔</span> Search Engine Submission</li>
               <li><span class="icon-tick">✔</span> FREE Consultation</li>
-              <li><span class="icon-cross">✖</span> FREE Domain Registration</li>
+              <li>
+                <span class="icon-cross">✖</span> FREE Domain Registration
+              </li>
               <li><span class="icon-cross">✖</span> Logo Design (Web Only)</li>
-              <li><span class="icon-cross">✖</span> Logo Design (Web & Print)</li>
+              <li>
+                <span class="icon-cross">✖</span> Logo Design (Web & Print)
+              </li>
               <li><span class="icon-cross">✖</span> Image Scanning</li>
               <li><span class="icon-cross">✖</span> Site Search</li>
               <li><span class="icon-cross">✖</span> Meta Tag Optimization</li>
               <li><span class="icon-cross">✖</span> Web Store</li>
-              <li><span class="icon-tick">✔</span> 100% Advance / Down Payment</li>
+              <li>
+                <span class="icon-tick">✔</span> 100% Advance / Down Payment
+              </li>
             </ul>
             <!-- <button class="cta" aria-label="Choose Basic Package">BUY</button> -->
           </div>
@@ -242,23 +286,33 @@
               <li><span class="icon-tick">✔</span> 1-5 Web Pages</li>
               <li><span class="icon-tick">✔</span> Custom Designed Website</li>
               <li><span class="icon-tick">✔</span> Mobile-Friendly Design</li>
-              <li><span class="icon-tick">✔</span> 2-4 Days to Complete a Page</li>
+              <li>
+                <span class="icon-tick">✔</span> 2-4 Days to Complete a Page
+              </li>
               <li><span class="icon-tick">✔</span> 1 Creative Concept</li>
               <li><span class="icon-tick">✔</span> 2 Revisions - up to</li>
-              <li><span class="icon-tick">✔</span> 3-8 Initial Design - in x Days</li>
+              <li>
+                <span class="icon-tick">✔</span> 3-8 Initial Design - in x Days
+              </li>
               <li><span class="icon-tick">✔</span> Multimedia Support</li>
               <li><span class="icon-tick">✔</span> Custom Graphics</li>
               <li><span class="icon-tick">✔</span> Query / Feedback Form</li>
               <li><span class="icon-tick">✔</span> Search Engine Submission</li>
               <li><span class="icon-tick">✔</span> FREE Consultation</li>
-              <li><span class="icon-tick">✔</span> FREE Domain Registration **</li>
+              <li>
+                <span class="icon-tick">✔</span> FREE Domain Registration **
+              </li>
               <li><span class="icon-tick">✔</span> Logo Design (Web Only)</li>
-              <li><span class="icon-cross">✖</span> Logo Design (Web & Print)</li>
+              <li>
+                <span class="icon-cross">✖</span> Logo Design (Web & Print)
+              </li>
               <li><span class="icon-cross">✔</span> Image Scanning</li>
               <li><span class="icon-cross">✖</span> Site Search</li>
               <li><span class="icon-cross">✖</span> Meta Tag Optimization</li>
               <li><span class="icon-cross">✖</span> Web Store</li>
-              <li><span class="icon-tick">✔</span> 50% Advance / Down Payment</li>
+              <li>
+                <span class="icon-tick">✔</span> 50% Advance / Down Payment
+              </li>
             </ul>
             <!-- <button class="cta" aria-label="Choose Standard Package">BUY</button> -->
           </div>
@@ -269,30 +323,40 @@
               <li><span class="icon-tick">✔</span> 1-20 Web Pages</li>
               <li><span class="icon-tick">✔</span> Custom Designed Website</li>
               <li><span class="icon-tick">✔</span> Mobile-Friendly Design</li>
-              <li><span class="icon-tick">✔</span> 2-4 Days to Complete a Page</li>
+              <li>
+                <span class="icon-tick">✔</span> 2-4 Days to Complete a Page
+              </li>
               <li><span class="icon-tick">✔</span> 2 Creative Concepts</li>
               <li><span class="icon-tick">✔</span> 5 Revisions - up to</li>
-              <li><span class="icon-tick">✔</span> 5-10 Initial Design - in x Days</li>
+              <li>
+                <span class="icon-tick">✔</span> 5-10 Initial Design - in x Days
+              </li>
               <li><span class="icon-tick">✔</span> Multimedia Support</li>
               <li><span class="icon-tick">✔</span> Custom Graphics</li>
               <li><span class="icon-tick">✔</span> Query / Feedback Form</li>
               <li><span class="icon-tick">✔</span> Search Engine Submission</li>
               <li><span class="icon-tick">✔</span> FREE Consultation</li>
-              <li><span class="icon-tick">✔</span> FREE Domain Registration **</li>
+              <li>
+                <span class="icon-tick">✔</span> FREE Domain Registration **
+              </li>
               <li><span class="icon-tick">✔</span> Logo Design (Web Only)</li>
-              <li><span class="icon-tick">✔</span> Logo Design (Web & Print)</li>
+              <li>
+                <span class="icon-tick">✔</span> Logo Design (Web & Print)
+              </li>
               <li><span class="icon-tick">✔</span> Image Scanning</li>
               <li><span class="icon-tick">✔</span> Site Search</li>
               <li><span class="icon-tick">✔</span> Meta Tag Optimization</li>
               <li><span class="icon-tick">✔</span> Web Store</li>
-              <li><span class="icon-tick">✔</span> 50% Advance / Down Payment</li>
+              <li>
+                <span class="icon-tick">✔</span> 50% Advance / Down Payment
+              </li>
             </ul>
             <!-- <button class="cta" aria-label="Choose Premium Package">BUY</button> -->
           </div>
         </div>
       </div>
 
-     <footer class="footer">
+      <footer class="footer">
         <div class="container">
           <div class="row">
             <div class="col-sm-4">
@@ -343,6 +407,8 @@
           </div>
           <div class="row">
             <div class="col-sm-12 text-center">
+              <p><a href="terms.html">Terms and Conditions</a></p>
+              <p><a href="privacy.html">Privacy Policy</a></p>
               <p>
                 &copy; 2025. All rights reserved. Design by
                 <a href="https://streamartisan.com/">streamartisan</a>.
